# Algos

./: CMakeLists.txt  main.cpp
amazon-interview/: is-num-palindrome.cpp  is-num-palindrome.h  largest-even-sum.cpp  largest-even-sum.h  magic-triplets.cpp  magic-triplets.h  min-number-coins.cpp  min-number-coins.h  stock-profit.cpp  stock-profit.h
backtracking/: cryptarithmetic-puzzle.cpp  cryptarithmetic-puzzle.h  hamiltonian-cycle.cpp  hamiltonian-cycle.h  knight-tour.cpp  knight-tour.h  m-color.cpp  m-color.h  n-queens.cpp  n-queens.h  permutations-of-string.cpp  permutations-of-string.h  rat-in-maze.cpp  rat-in-maze.h  subset-sum.cpp  subset-sum.h  sudoku.cpp  sudoku.h  tug-of-war.cpp  tug-of-war.h
divide-and-conquer/: count-of-inversion.cpp  count-of-inversion.h  find-max.cpp  find-max.h  median-of-2-array.cpp  median-of-2-array.h  power.cpp  power.h
dynamic-programming/: 01-knapsack.cpp  01-knapsack.h  binomial-coefficient.cpp  binomial-coefficient.h  box-stacking.cpp  box-stacking.h  change-ways.cpp  change-ways.h  cutting-rod.cpp  cutting-rod.h  digit-sum-until-n.cpp  digit-sum-until-n.h  egg-drop.cpp  egg-drop.h  fibonacci.cpp  fibonacci.h  floyd-warshall.cpp  floyd-warshall.h  job-profit.cpp  job-profit.h  largest-contigous-sum.cpp  largest-contigous-sum.h  longest-bitonic-seq.cpp  longest-bitonic-seq.h  longest-common-substring.cpp  longest-common-substring.h  longest-increasing-subseq.cpp  longest-increasing-subseq.h  longest-sub-palindrome.cpp  longest-sub-palindrome.h  matrix-chain-multiplication.cpp  matrix-chain-multiplication.h  max-As.cpp  max-As.h  max-length-chain.cpp  max-length-chain.h  max-profit-transactions.cpp  max-profit-transactions.h  max-square-size-matrix.cpp  max-square-size-matrix.h  (+34 more)
geometric/: convex_hull.cpp  convex_hull.h  inside-polygon.cpp  inside-polygon.h  inside-triangle.cpp  inside-triangle.h  is-square.cpp  is-square.h  line-segment-intersection.cpp  line-segment-intersection.h
graph/: DAG-has-cycle.cpp  DAG-has-cycle.h  articulation-points.cpp  articulation-points.h  bridges.cpp  bridges.h  disjoint-set.cpp  disjoint-set.h  graph-with-edge.cpp  graph-with-edge.h  graph.cpp  graph.h  has-path.cpp  has-path.h  is-biconnected.cpp  is-biconnected.h  is-bipartite.cpp  is-bipartite.h  is-euler-path-cycle.cpp  is-euler-path-cycle.h  is-strongly-connected-DAG.cpp  is-strongly-connected-DAG.h  is-tree.cpp  is-tree.h  kruskal.cpp  kruskal.h  longest-path-DAG.cpp  longest-path-DAG.h  prims-MST.cpp  prims-MST.h  topological-sort.cpp  topological-sort.h  undirected-has-cycle.cpp  undirected-has-cycle.h
math/: base-14-add.cpp  base-14-add.h  birthday-paradox.cpp  birthday-paradox.h  bisection-root.cpp  bisection-root.h  distinct-prime-factors.cpp  distinct-prime-factors.h  divisible-by-7.cpp  divisible-by-7.h  e-to-x.cpp  e-to-x.h  is-multiple-3.cpp  is-multiple-3.h  lucky-number.cpp  lucky-number.h  multiply-7.h  multipply-7.cpp  newton-rapson-root.cpp  newton-rapson-root.h  power.cpp  power.h  primes.cpp  primes.h  recursive-multiply.cpp  recursive-multiply.h  secant-root.cpp  secant-root.h  square-root.cpp  square-root.h
microsoft-interview/: AVL.cpp  AVL.h  BST.cpp  BST.h  binary-tree.cpp  binary-tree.h  binomial_heap.cpp  binomial_heap.h  doubly-list.cpp  doubly-list.h  fibonacci_heap.cpp  fibonacci_heap.h  heap.cpp  heap.h  infix-postfix.cpp  infix-postfix.h  k-dim-tree.cpp  k-dim-tree.h  patricia-trie.cpp  patricia-trie.h  red-black-tree.cpp  red-black-tree.h  segment-tree.cpp  segment-tree.h  splay-tree.cpp  splay-tree.h  suffix-array.cpp  suffix-array.h  suffix-trie.cpp  suffix-trie.h  trie.cpp  trie.h
search/: binary_search.h  binary_search.tpp  interpolation_search.h  interpolation_search.tpp  jump_search.h  jump_search.tpp  linear_search.h  linear_search.tpp  ternary_search.h  ternary_search.tpp
sort/: bubble-sort.h  bubble-sort.tpp  bucket-sort.h  bucket-sort.tpp  comb-sort.h  comb-sort.tpp  counting-sort.h  counting-sort.tpp  cycle-sort.h  cycle-sort.tpp  insertion-sort.h  insertion-sort.tpp  merge-sort.h  merge-sort.tpp  pigeonhole-sort.h  pigeonhole-sort.tpp  quick-sort.h  quick-sort.tpp  radix-sort.h  radix-sort.tpp  selection_sort.h  selection_sort.tpp  shell-sort.h  shell-sort.tpp
string/: kmp-search.cpp  kmp-search.h  naive-search.cpp  naive-search.h  optimized-naive-search.cpp  optimized-naive-search.h  rabin-karp.cpp  rabin-karp.h
