cmake_minimum_required(VERSION 3.16)
project(Algos)

set(CMAKE_CXX_STANDARD 17)

add_executable(Algos
        main.cpp
        search/linear_search.h search/linear_search.tpp
        search/binary_search.h search/binary_search.tpp
        search/interpolation_search.h search/interpolation_search.tpp
        search/jump_search.h search/jump_search.tpp
        search/ternary_search.h search/ternary_search.tpp
        sort/bubble-sort.h sort/bubble-sort.tpp
        sort/selection_sort.h sort/selection_sort.tpp
        sort/counting-sort.h sort/counting-sort.tpp
        sort/quick-sort.h sort/quick-sort.tpp
        sort/merge-sort.h sort/merge-sort.tpp
        sort/bucket-sort.h sort/bubble-sort.tpp
        sort/pigeonhole-sort.h sort/pigeonhole-sort.tpp
        sort/insertion-sort.h sort/insertion-sort.tpp
        sort/comb-sort.h sort/comb-sort.tpp
        sort/shell-sort.h sort/shell-sort.tpp
        sort/cycle-sort.h sort/cycle-sort.tpp
        divide-and-conquer/power.h divide-and-conquer/power.cpp
        divide-and-conquer/find-max.h divide-and-conquer/find-max.cpp
        divide-and-conquer/median-of-2-array.h divide-and-conquer/median-of-2-array.cpp
        divide-and-conquer/count-of-inversion.h divide-and-conquer/count-of-inversion.cpp
        dynamic-programming/longest-common-substring.h dynamic-programming/longest-common-substring.cpp
        dynamic-programming/longest-increasing-subseq.h dynamic-programming/longest-increasing-subseq.cpp
        dynamic-programming/min-edit-distance.h dynamic-programming/min-edit-distance.cpp
        dynamic-programming/min-cost-path.h dynamic-programming/min-cost-path.cpp
        dynamic-programming/change-ways.h dynamic-programming/change-ways.cpp
        dynamic-programming/matrix-chain-multiplication.h dynamic-programming/matrix-chain-multiplication.cpp
        dynamic-programming/binomial-coefficient.h dynamic-programming/binomial-coefficient.cpp
        dynamic-programming/01-knapsack.h dynamic-programming/01-knapsack.cpp
        dynamic-programming/egg-drop.h dynamic-programming/egg-drop.cpp
        dynamic-programming/longest-sub-palindrome.h dynamic-programming/longest-sub-palindrome.cpp
        dynamic-programming/cutting-rod.h dynamic-programming/cutting-rod.cpp
        dynamic-programming/maximum-sum-increasing-subseq.h dynamic-programming/maximum-sum-increasing-subseq.cpp
        dynamic-programming/longest-bitonic-seq.h dynamic-programming/longest-bitonic-seq.cpp
        dynamic-programming/floyd-warshall.h dynamic-programming/floyd-warshall.cpp
        dynamic-programming/fibonacci.h dynamic-programming/fibonacci.cpp
        dynamic-programming/tiling.h dynamic-programming/tiling.cpp
        dynamic-programming/partition.h dynamic-programming/partition.cpp
        dynamic-programming/max-length-chain.h dynamic-programming/max-length-chain.cpp
        dynamic-programming/box-stacking.h dynamic-programming/box-stacking.cpp
        dynamic-programming/min-jump.h dynamic-programming/min-jumps.cpp
        dynamic-programming/ugly-number.h dynamic-programming/ugly-number.cpp
        dynamic-programming/largest-contigous-sum.h dynamic-programming/largest-contigous-sum.cpp
        dynamic-programming/subset-sum.h dynamic-programming/subset-sum.cpp
        dynamic-programming/max-square-size-matrix.h dynamic-programming/max-square-size-matrix.cpp
        dynamic-programming/no-consecutive-ones.h dynamic-programming/no-consecutive-ones.cpp
        dynamic-programming/stair-ways.h dynamic-programming/stair-ways.cpp
        dynamic-programming/non-decreasing-numbers.h dynamic-programming/non-decreasing-numbers.cpp
        dynamic-programming/n-digit-number-of-sum.h dynamic-programming/n-digit-number-of-sum.cpp
        dynamic-programming/digit-sum-until-n.h dynamic-programming/digit-sum-until-n.cpp
        dynamic-programming/min-no-change.h dynamic-programming/min-no-change.cpp
        dynamic-programming/min-no-squares.h dynamic-programming/min-no-squares.cpp
        dynamic-programming/ways-for-building.h dynamic-programming/ways-for-building.cpp
        dynamic-programming/max-profit-transactions.h dynamic-programming/max-profit-transactions.cpp
        dynamic-programming/min-cost-train-path.h dynamic-programming/min-cost-train-path.cpp
        dynamic-programming/max-As.h dynamic-programming/max-As.cpp
        dynamic-programming/score-ways.h dynamic-programming/score-ways.cpp
        dynamic-programming/job-profit.h dynamic-programming/job-profit.cpp
        backtracking/permutations-of-string.h backtracking/permutations-of-string.cpp
        backtracking/knight-tour.h backtracking/knight-tour.cpp
        backtracking/rat-in-maze.h backtracking/rat-in-maze.cpp
        backtracking/n-queens.h backtracking/n-queens.cpp
        backtracking/subset-sum.h backtracking/subset-sum.cpp
        backtracking/m-color.h backtracking/m-color.cpp
        backtracking/hamiltonian-cycle.h backtracking/hamiltonian-cycle.cpp
        backtracking/sudoku.h backtracking/sudoku.cpp
        backtracking/tug-of-war.h backtracking/tug-of-war.cpp
        backtracking/cryptarithmetic-puzzle.h backtracking/cryptarithmetic-puzzle.cpp
        geometric/line-segment-intersection.h geometric/line-segment-intersection.cpp
        geometric/inside-polygon.h geometric/inside-polygon.cpp
        geometric/convex_hull.h geometric/convex_hull.cpp
        geometric/inside-triangle.h geometric/inside-triangle.cpp
        geometric/is-square.h geometric/is-square.cpp
        graph/graph.h graph/graph.cpp
        graph/graph-with-edge.h graph/graph-with-edge.cpp
        graph/DAG-has-cycle.h graph/DAG-has-cycle.cpp
        graph/undirected-has-cycle.h graph/undirected-has-cycle.cpp
        graph/longest-path-DAG.h graph/longest-path-DAG.cpp
        graph/topological-sort.h graph/topological-sort.cpp
        graph/is-bipartite.h graph/is-bipartite.cpp
        graph/disjoint-set.h graph/disjoint-set.cpp
        graph/is-tree.h graph/is-tree.cpp
        graph/prims-MST.h graph/prims-MST.cpp
        graph/kruskal.h graph/kruskal.cpp
        graph/has-path.h graph/has-path.cpp
        graph/is-strongly-connected-DAG.h graph/is-strongly-connected-DAG.cpp
        graph/articulation-points.h graph/articulation-points.cpp
        graph/is-biconnected.h graph/is-biconnected.cpp
        graph/bridges.h graph/bridges.cpp
        graph/is-euler-path-cycle.h graph/is-euler-path-cycle.cpp
        math/is-multiple-3.h math/is-multiple-3.cpp
        math/multiply-7.h math/multipply-7.cpp
        math/lucky-number.h math/lucky-number.cpp
        math/base-14-add.h math/base-14-add.cpp
        math/square-root.h math/square-root.cpp
        math/recursive-multiply.h math/recursive-multiply.cpp
        math/power.h math/power.cpp
        math/primes.h math/primes.cpp
        math/distinct-prime-factors.h math/distinct-prime-factors.cpp
        math/divisible-by-7.h math/divisible-by-7.cpp
        math/birthday-paradox.h math/birthday-paradox.cpp
        math/e-to-x.h math/e-to-x.cpp
        math/newton-rapson-root.h math/newton-rapson-root.cpp
        math/bisection-root.h math/bisection-root.cpp
        math/secant-root.h math/secant-root.cpp
        amazon-interview/magic-triplets.h amazon-interview/magic-triplets.cpp
        amazon-interview/min-number-coins.h amazon-interview/min-number-coins.cpp
        amazon-interview/stock-profit.h amazon-interview/stock-profit.cpp
        amazon-interview/is-num-palindrome.h amazon-interview/is-num-palindrome.cpp
        amazon-interview/largest-even-sum.h amazon-interview/largest-even-sum.cpp
        string/naive-search.h string/naive-search.cpp
        string/kmp-search.h string/kmp-search.cpp
        string/rabin-karp.h string/rabin-karp.cpp
        string/optimized-naive-search.h string/optimized-naive-search.cpp
        microsoft-interview/doubly-list.h microsoft-interview/doubly-list.cpp
        microsoft-interview/heap.h microsoft-interview/heap.cpp
        microsoft-interview/suffix-array.h microsoft-interview/suffix-array.cpp
        microsoft-interview/trie.h microsoft-interview/trie.cpp
        microsoft-interview/patricia-trie.h microsoft-interview/patricia-trie.cpp
        microsoft-interview/suffix-trie.h microsoft-interview/suffix-trie.cpp
        microsoft-interview/AVL.h microsoft-interview/AVL.cpp
        microsoft-interview/BST.h microsoft-interview/BST.cpp
        microsoft-interview/splay-tree.h microsoft-interview/splay-tree.cpp
        microsoft-interview/red-black-tree.h microsoft-interview/red-black-tree.cpp
        microsoft-interview/segment-tree.h microsoft-interview/segment-tree.cpp
        microsoft-interview/k-dim-tree.h microsoft-interview/k-dim-tree.cpp
        microsoft-interview/infix-postfix.h microsoft-interview/infix-postfix.cpp
        microsoft-interview/binomial_heap.h microsoft-interview/binomial_heap.cpp
        microsoft-interview/fibonacci_heap.h microsoft-interview/fibonacci_heap.cpp
        )